# simulated-annealing

./: .f2py_f2cmap  .gitignore  LICENSE.txt  README.md  build_ctypes.sh  build_f2py.sh  dask_parallel_example.py  example.py  example_ctypes.py  example_parallel_package.py  example_report.py  ford.md  fpm.toml  index.html  modules.json  parallel_example.py  plot_distributions.py  pyproject.toml  python_example.py  report.py  search.html  simulated-annealing.fobis  simulated-annealing.md
env/: pixi.toml
interface/: c_sa_func.html  c_sa_func_parallel_inputs.html  c_sa_func_parallel_inputs_func.html  c_sa_func_parallel_output_func.html  c_sa_report_func.html  dist_func.html  sa_func.html  sa_func_parallel_inputs.html  sa_func_parallel_inputs_func.html  sa_func_parallel_output_func.html  sa_report_func.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: simulated_annealing_module.html  simulated_annealing_module_c.html
proc/: bipareto.html  cauchy.html  destroy_sa.html  destroy_simulated_annealing.html  exprep.html  fcn_parallel_input_wrapper.html  fcn_parallel_output_wrapper.html  fcn_wrapper.html  func.html  initialize_sa.html  initialize_simulated_annealing.html  int_pointer_to_f_pointer.html  n_inputs_wrapper.html  normal.html  perturb_and_evaluate.html  perturb_variable.html  print_vector.html  rand_init.html  report_wrapper.html  sa.html  solve_simulated_annealing.html  triangular_dist.html  truncated_normal.html  uniform.html  uniform_random_number.html
sa_fortran/: __init__.py  interface.py
search/: search_database.json
(+19 files in other folders)
