[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sa-fortran"
version = "0.0.1"
description = "Python interface to Fortran simulated annealing library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Jacob Williams", email = "jacobwilliams@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sa_fortran"]

[tool.hatch.build.targets.wheel.force-include]
"sa_fortran/lib" = "sa_fortran/lib"
